[gd_scene load_steps=3 format=3 uid="uid://7bn4a56gypuj"]

[ext_resource type="Script" uid="uid://c8pkw2hs14qni" path="res://ui/hud/tool_panel/basic_hud.gd" id="1_m0gie"]
[ext_resource type="Theme" uid="uid://cbvflgkah1pwb" path="res://resource/engine_template/basic_theme.tres" id="1_xoayu"]

[node name="BasicHud" type="CanvasLayer"]
script = ExtResource("1_m0gie")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xoayu")

[node name="StatusPanel" type="MarginContainer" parent="Control"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
offset_right = 20.0
offset_bottom = 20.0
scale = Vector2(2, 2)

[node name="VBoxContainer" type="VBoxContainer" parent="Control/StatusPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/StatusPanel/VBoxContainer"]
layout_mode = 2
text = "生命"
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Control/StatusPanel/VBoxContainer/Label"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -4.0
offset_right = 90.0
grow_horizontal = 2
grow_vertical = 0
value = 19.0
show_percentage = false

[node name="Label2" type="Label" parent="Control/StatusPanel/VBoxContainer"]
layout_mode = 2
text = "魔力"

[node name="ProgressBar2" type="ProgressBar" parent="Control/StatusPanel/VBoxContainer/Label2"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0
show_percentage = false

[node name="Label3" type="Label" parent="Control/StatusPanel/VBoxContainer"]
layout_mode = 2
text = "耐力"
vertical_alignment = 1

[node name="ProgressBar3" type="ProgressBar" parent="Control/StatusPanel/VBoxContainer/Label3"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0
show_percentage = false
